:sparkles: calculs des dégats en fonction des types et du stab